; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_utils.c_x8_d24_unorm_upload.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_utils.c_x8_d24_unorm_upload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32, i32, i32, i32, i32, i32)* @x8_d24_unorm_upload to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @x8_d24_unorm_upload(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32*, align 8
  %23 = alloca i32*, align 8
  store i32* %0, i32** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store i32 %8, i32* %18, align 4
  store i32 0, i32* %21, align 4
  br label %24

24:                                               ; preds = %87, %9
  %25 = load i32, i32* %21, align 4
  %26 = load i32, i32* %18, align 4
  %27 = icmp ult i32 %25, %26
  br i1 %27, label %28, label %90

28:                                               ; preds = %24
  store i32 0, i32* %20, align 4
  br label %29

29:                                               ; preds = %83, %28
  %30 = load i32, i32* %20, align 4
  %31 = load i32, i32* %17, align 4
  %32 = icmp ult i32 %30, %31
  br i1 %32, label %33, label %86

33:                                               ; preds = %29
  %34 = load i32*, i32** %10, align 8
  %35 = load i32, i32* %21, align 4
  %36 = load i32, i32* %13, align 4
  %37 = mul i32 %35, %36
  %38 = zext i32 %37 to i64
  %39 = getelementptr inbounds i32, i32* %34, i64 %38
  %40 = load i32, i32* %20, align 4
  %41 = load i32, i32* %12, align 4
  %42 = mul i32 %40, %41
  %43 = zext i32 %42 to i64
  %44 = getelementptr inbounds i32, i32* %39, i64 %43
  store i32* %44, i32** %22, align 8
  %45 = load i32*, i32** %11, align 8
  %46 = load i32, i32* %21, align 4
  %47 = load i32, i32* %15, align 4
  %48 = mul i32 %46, %47
  %49 = zext i32 %48 to i64
  %50 = getelementptr inbounds i32, i32* %45, i64 %49
  %51 = load i32, i32* %20, align 4
  %52 = load i32, i32* %14, align 4
  %53 = mul i32 %51, %52
  %54 = zext i32 %53 to i64
  %55 = getelementptr inbounds i32, i32* %50, i64 %54
  store i32* %55, i32** %23, align 8
  store i32 0, i32* %19, align 4
  br label %56

56:                                               ; preds = %79, %33
  %57 = load i32, i32* %19, align 4
  %58 = load i32, i32* %16, align 4
  %59 = icmp ult i32 %57, %58
  br i1 %59, label %60, label %82

60:                                               ; preds = %56
  %61 = load i32*, i32** %22, align 8
  %62 = load i32, i32* %19, align 4
  %63 = zext i32 %62 to i64
  %64 = getelementptr inbounds i32, i32* %61, i64 %63
  %65 = load i32, i32* %64, align 4
  %66 = shl i32 %65, 8
  %67 = load i32*, i32** %22, align 8
  %68 = load i32, i32* %19, align 4
  %69 = zext i32 %68 to i64
  %70 = getelementptr inbounds i32, i32* %67, i64 %69
  %71 = load i32, i32* %70, align 4
  %72 = ashr i32 %71, 16
  %73 = and i32 %72, 255
  %74 = or i32 %66, %73
  %75 = load i32*, i32** %23, align 8
  %76 = load i32, i32* %19, align 4
  %77 = zext i32 %76 to i64
  %78 = getelementptr inbounds i32, i32* %75, i64 %77
  store i32 %74, i32* %78, align 4
  br label %79

79:                                               ; preds = %60
  %80 = load i32, i32* %19, align 4
  %81 = add i32 %80, 1
  store i32 %81, i32* %19, align 4
  br label %56

82:                                               ; preds = %56
  br label %83

83:                                               ; preds = %82
  %84 = load i32, i32* %20, align 4
  %85 = add i32 %84, 1
  store i32 %85, i32* %20, align 4
  br label %29

86:                                               ; preds = %29
  br label %87

87:                                               ; preds = %86
  %88 = load i32, i32* %21, align 4
  %89 = add i32 %88, 1
  store i32 %89, i32* %21, align 4
  br label %24

90:                                               ; preds = %24
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
